--- a/views/partials/header.pug
+++ b/views/partials/header.pug
@@ -19,6 +19,7 @@ h1.text-center CPPS
           a.nav-link(data-toggle='dropdown', href='#') &nbsp;#[i.fa.fa-caret-down]
           .dropdown-menu
             a.dropdown-item(href='/gateway/recent') Recent
+            a.dropdown-item(href='/gateway/leaderboard') Leaderboard
       li.nav-item
         a.nav-link(href='/faq') FAQ
       li.nav-item
