Allow users to view a random unsolved problem
Closes #103

--- a/views/partials/header.pug
+++ b/views/partials/header.pug
@@ -20,6 +20,7 @@ h1.text-center CPPS
           .dropdown-menu
             a.dropdown-item(href='/gateway/recent') Recent
             a.dropdown-item(href='/gateway/leaderboard') Leaderboard
+            a.dropdown-item(href='/gateway/random-problem') Random Problem
       li.nav-item
         a.nav-link(href='/faq') FAQ
       li.nav-item
