Add api for user solve sync

--- a/views/partials/header.pug
+++ b/views/partials/header.pug
@@ -33,7 +33,7 @@ h1.text-center CPPS
           li.nav-item
             a.nav-link(href='/admin/dashboard') #[i.fa.fa-dashboard] Admin
         li.nav-item
-          a.nav-link(href=`/user/profile/${username}`) #[i.fa.fa-user] Profile
+          a.nav-link(href=`/users/profile/${username}`) #[i.fa.fa-user] Profile
         li.nav-item
           a.nav-link(href='/user/logout') #[i.fa.fa-sign-out] Logout
       else
